# homework-20250505

./: README.md  main.ipynb  main.py  pyproject.toml  requirements.txt
classifiers/: logistic_regression.py
dmia/: gradient_check.py
