[project]
name = "homework-20250505"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergey",email = "sgudkovv@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
package-dir = "homework-20250505"